Diplom1_1/Diplom1/log.txt
Mon Jun  6 02:35:54 2022
Windows-10-10.0.19041
Ren'Py 7.4.11.2266
 

Bootstrap to the start of init.init took 0.09s
Early init took 0.00s
Loader init took 0.03s
Loading error handling took 0.02s
Loading script took 0.26s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.08s
Loading analysis data took 0.03s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\??????\\AppData\\Roaming/RenPy/backups\\Diplom1':
Dump and make backups. took 0.07s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.02s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.04s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.01s
Save screen analysis took 0.04s
Prepare screens took 0.07s
Save pyanalysis. took 0.00s
Save bytecode. took 0.03s
Running _start took 0.00s
Performance test:
Interface start took 0.11s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'Intel'
Renderer: 'Intel(R) HD Graphics 530'
Version: '4.6.0 - Build 26.20.100.7262'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1271, 715) drawable=(1271, 715)
Maximum texture size: 4096x4096

Full traceback:
  File "game/script.rpy", line 212, in script
    if $ money >= 50:
  File "renpy/ast.py", line 1898, in execute
    if renpy.python.py_eval(condition):
  File "renpy/python.py", line 2274, in py_eval
    code = py_compile(code, 'eval')
  File "renpy/python.py", line 835, in py_compile
    raise e
SyntaxError: invalid syntax (script.rpy, line 212)

While running game code:
  File "game/script.rpy", line 212, in script
    if $ money >= 50:
SyntaxError: invalid syntax (script.rpy, line 212)
Resetting cache.
Bootstrap to the start of init.init took 179.77s
Early init took 0.00s
Loader init took 0.03s
Loading error handling took 0.02s
Loading script took 0.16s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.05s
Loading analysis data took 0.02s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\??????\\AppData\\Roaming/RenPy/backups\\Diplom1':
Dump and make backups. took 0.07s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.03s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.04s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.01s
Save screen analysis took 0.04s
Prepare screens took 0.07s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.05s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'Intel'
Renderer: 'Intel(R) HD Graphics 530'
Version: '4.6.0 - Build 26.20.100.7262'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1271, 715) drawable=(1271, 715)
Maximum texture size: 4096x4096

Full traceback:
  File "game/script.rpy", line 216, in script
    a1 "Эй, сначала деньги!"
  File "renpy/ast.py", line 681, in execute
    who = eval_who(self.who, self.who_fast)
  File "renpy/ast.py", line 574, in eval_who
    raise Exception("Sayer '%s' is not defined." % who)
Exception: Sayer 'a1' is not defined.

While running game code:
  File "game/script.rpy", line 216, in script
    a1 "Эй, сначала деньги!"
Exception: Sayer 'a1' is not defined.
Resetting cache.
Bootstrap to the start of init.init took 287.75s
Early init took 0.00s
Loader init took 0.04s
Loading error handling took 0.02s
Loading script took 0.15s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s

File "game/script.rpy", line 216: end of line expected.
    a1 "Эй, сначала деньги!":
                            ^
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Interface start took 0.10s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'Intel'
Renderer: 'Intel(R) HD Graphics 530'
Version: '4.6.0 - Build 26.20.100.7262'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1271, 715) drawable=(1271, 715)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 313.66s
Early init took 0.00s
Loader init took 0.03s
Loading error handling took 0.02s
Loading script took 0.19s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.07s
Loading analysis data took 0.02s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\??????\\AppData\\Roaming/RenPy/backups\\Diplom1':
Dump and make backups. took 0.07s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.03s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.04s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.01s
Save screen analysis took 0.04s
Prepare screens took 0.09s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.05s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'Intel'
Renderer: 'Intel(R) HD Graphics 530'
Version: '4.6.0 - Build 26.20.100.7262'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1271, 715) drawable=(1271, 715)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 456.46s
Early init took 0.00s
Loader init took 0.03s
Loading error handling took 0.02s
Loading script took 0.18s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.05s
Loading analysis data took 0.02s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\??????\\AppData\\Roaming/RenPy/backups\\Diplom1':
Dump and make backups. took 0.07s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.04s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.04s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.01s
Save screen analysis took 0.04s
Prepare screens took 0.08s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.06s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'Intel'
Renderer: 'Intel(R) HD Graphics 530'
Version: '4.6.0 - Build 26.20.100.7262'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1271, 715) drawable=(1271, 715)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 559.84s
Early init took 0.00s
Loader init took 0.03s
Loading error handling took 0.02s
Loading script took 0.17s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Importing _renpysteam: ImportError('No module named _renpysteam',)
Running init code took 0.05s
Loading analysis data took 0.02s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to 'C:\\Users\\??????\\AppData\\Roaming/RenPy/backups\\Diplom1':
Dump and make backups. took 0.07s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.04s
DPI scale factor: 1.000000
nvdrs: Loaded, about to disable thread optimizations.
nvdrs: "Couldn't load nvlib." (can be ignored)
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.04s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.02s
Save screen analysis took 0.04s
Prepare screens took 0.09s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.06s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'Intel'
Renderer: 'Intel(R) HD Graphics 530'
Version: '4.6.0 - Build 26.20.100.7262'
Display Info: None
Screen sizes: virtual=(1280, 720) physical=(1271, 715) drawable=(1271, 715)
Maximum texture size: 4096x4096
